@@ -1,8 +1,8 @@
 Package: expm
 Type: Package
 Title: Matrix exponential
-Version: 0.98-2
-Date: 2010-07-08
+Version: 0.98-3
+Date: 2010-08-12
 Author: Vincent Goulet, Christophe Dutang, Martin Maechler,
 	David Firth, Marina Shapira, Michael Stadelmann,
 	expm-developers@lists.R-forge.R-project.org
