@@ -69,6 +69,12 @@ logm.Higham08(x)
 m <- diag(2)
 logm(m)
 expm(logm(m))
+
+## Here, logm() is barely defined, and Higham08 has needed an amendment
+## in order for not to loop forever:
+D0 <- diag(x=c(1, 0.))
+(L. <- logm(D0))
+stopifnot( all.equal(D0, expm(L.)) )
 }
 \keyword{algebra}
 \keyword{math}
