@@ -1,3 +1,11 @@
+2010-08-12  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/logm.Higham08.R (logm.Higham08): force argument to Schur(.) to
+	be dense for now  (working around infelicitous Matrix method).
+	(logm.Higham08): catch case of infinite loop
+
+	* man/logm.Rd: add example of the above.
+
 2010-07-19  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* DESCRIPTION (Version): 0.98-2
